--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;[env:esp01_1m]
+;platform = espressif8266
+;board = esp01_1m
+;framework = arduino
+;monitor_speed = 115200
+;upload_speed = 115200
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed = 115200
+
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
