Se agrega compatibilidad con ESP8266

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;[env:esp01_1m]
-;platform = espressif8266
-;board = esp01_1m
-;framework = arduino
-;monitor_speed = 115200
-;upload_speed = 115200
+[env:esp01_1m]
+platform = espressif8266
+board = esp01_1m
+framework = arduino
+monitor_speed = 115200
+
 
 [env:nodemcu-32s]
 platform = espressif32
